--- a/index.html
+++ b/index.html
@@ -337,6 +337,8 @@
 						<li><p><a href="https://sites.google.com/view/professorflaviadelicato/home" target="_blank" rel="noopener noreferrer">Flavia Delicato, Fluminense Federal University</a></p></li>
 						<li><p><a href="https://jspencer.org/" target="_blank" rel="noopener noreferrer">Jonathan Spencer, Waymo</a></p></li>
 						<!--  <li><p><a href=""></a></p></li> -->
+						<li><p><a href="https://dr.ntu.edu.sg/cris/rp/rp02029" target="_blank" rel="noopener noreferrer">Chee Wei Tan, Nanyang Technological University</a></p></li>
+						<!--  <li><p><a href=""></a></p></li> -->
 					</ul>
 					<p><i>Interested in joining the Technical Program Committee? Please reach out to the <a href="#contact">organizers</a>.</i></p>
 
