--- a/index.html
+++ b/index.html
@@ -60,6 +60,9 @@
 			<div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
 				<ul class="nav navbar-nav navbar-right">
 					<li>
+						<a class="page-scroll" href="#news"><b style='color:red;'>News</b> </a>
+					</li>
+					<li>
 						<a class="page-scroll" href="#about">About</a>
 					</li>
 					<li>
@@ -112,11 +115,27 @@
 		</div>
 	</header>
 
+	<section id="news">
+		<div class="container">
+			<div class="row">
+				<div class="col-lg-12 text-center">
+					<h2 class="section-heading"><b style='color:red;'>News</b></h2>
+					<!-- <h3 class="section-heading">September 12th</h3> -->
+					<!-- <h3 class="section-heading">Cancún, México</h3> -->
+					<hr class="light">
+
+					<p class="text-black text-left">
+						<b style='color:darkblue; font-size:20px;'>[April 5th]</b> <b style='color:darkblue; font-size:20px;'> Submission deadline extended to April 24th, AoE (FIRM).</b>
+					</p>
+		</div>
+		</div>
+		</div>
+
 	<section id="about">
 		<div class="container">
 			<div class="row">
 				<div class="col-lg-12 text-center">
-					<h2 class="section-heading">MobiSys 2023 Workshop on<br>Networked AI Systems</h2>
+					<h2 class="section-heading">MobiSys 2023 Workshop on Networked AI Systems</h2>
 					<!-- <h3 class="section-heading">September 12th</h3> -->
 					<!-- <h3 class="section-heading">Cancún, México</h3> -->
 					<hr class="light">
@@ -211,7 +230,7 @@
 						<h3>Submission Important Dates</h3>
 						<div class="text-black text-left">
 						  <ul>
-							<li><p>Submission Deadline: <b>Saturday April 8th, 2023, AoE</b></p></li>
+							<li><p>Submission Deadline: <b style='color:red;'>Monday April 24th, 2023, AoE [FIRM]</b></p></li>
 							<li><p>Notification of Acceptenace: <b>Monday May 8th, 2023, AoE</b></p></li>
 							<li><p>Camera-ready Papers Due: <b>Monday May 15th, 2023, AoE</b></p></li>
 							<li><p>Workshop Date: <b>Sunday June 18, 2023</b></p></li>
