important dates updated

--- a/index.html
+++ b/index.html
@@ -230,7 +230,7 @@
 						<h3>Submission Important Dates</h3>
 						<div class="text-black text-left">
 						  <ul>
-							<li><p>Submission Deadline: <b style='color:red;'>Monday April 24th, 2023, AoE [FIRM]</b></p></li>
+							<li><p>Submission Deadline: <b>Monday April 24th, 2023, AoE [FIRM]</b></p></li>
 							<li><p>Notification of Acceptenace: <b>Monday May 8th, 2023, AoE</b></p></li>
 							<li><p>Camera-ready Papers Due: <b style='color:red;'>Monday May 15th, 2023, AoE [FIRM]</b></p></li>
 							<li><p>Workshop Date: <b>Sunday June 18, 2023</b></p></li>
