important dates updated

--- a/index.html
+++ b/index.html
@@ -123,7 +123,9 @@
 					<!-- <h3 class="section-heading">September 12th</h3> -->
 					<!-- <h3 class="section-heading">Cancún, México</h3> -->
 					<hr class="light">
-
+					<p class="text-black text-left">
+						<b style='color:darkblue; font-size:20px;'>[May 8th]</b> <b style='color:darkblue; font-size:20px;'> Notification of acceptance to be sent to the authors on May 10th.</b>
+					</p>
 					<p class="text-black text-left">
 						<b style='color:darkblue; font-size:20px;'>[April 5th]</b> <b style='color:darkblue; font-size:20px;'> Submission deadline extended to April 24th, AoE (FIRM).</b>
 					</p>
@@ -231,7 +233,7 @@
 						<div class="text-black text-left">
 						  <ul>
 							<li><p>Submission Deadline: <b>Monday April 24th, 2023, AoE [FIRM]</b></p></li>
-							<li><p>Notification of Acceptenace: <b>Monday May 8th, 2023, AoE</b></p></li>
+							<li><p>Notification of Acceptenace: <b style='color:red;'>Monday May 10th, 2023, AoE</b></p></li>
 							<li><p>Camera-ready Papers Due: <b style='color:red;'>Monday May 15th, 2023, AoE [FIRM]</b></p></li>
 							<li><p>Workshop Date: <b>Sunday June 18, 2023</b></p></li>
 						  </ul>         
