camera-ready and registration

--- a/index.html
+++ b/index.html
@@ -63,6 +63,9 @@
 						<a class="page-scroll" href="#news"><b style='color:red;'>News</b> </a>
 					</li>
 					<li>
+						<a class="page-scroll" href="#camera-ready"><b style='color:green;'>Camera Ready</b> </a>
+					</li>
+					<li>
 						<a class="page-scroll" href="#about">About</a>
 					</li>
 					<li>
@@ -120,18 +123,44 @@
 			<div class="row">
 				<div class="col-lg-12 text-center">
 					<h2 class="section-heading"><b style='color:red;'>News</b></h2>
+					<hr class="light">
+					<p class="text-black text-left">
+						<b style='color:darkblue; font-size:16px;'>[May 11th]</b> <b style='color:darkblue; font-size:16px;'> Camera-Ready Instructions and Registration details updated.</b>
+					</p>
+					<p class="text-black text-left">
+						<b style='color:darkblue; font-size:16px;'>[May 8th]</b> <b style='color:darkblue; font-size:16px;'> Notification of acceptance to be sent to the authors on May 10th.</b>
+					</p>
+					<p class="text-black text-left">
+						<b style='color:darkblue; font-size:16px;'>[April 5th]</b> <b style='color:darkblue; font-size:16px;'> Submission deadline extended to April 24th, AoE (FIRM).</b>
+					</p>
+		</div>
+		</div>
+		</div>
+
+	<section id="camera-ready">
+		<div class="container">
+			<div class="row">
+				<div class="col-lg-12 text-center">
+					<h2 class="section-heading">Camera-Ready instructions</h2>
 					<!-- <h3 class="section-heading">September 12th</h3> -->
 					<!-- <h3 class="section-heading">Cancún, México</h3> -->
 					<hr class="light">
-					<p class="text-black text-left">
-						<b style='color:darkblue; font-size:20px;'>[May 8th]</b> <b style='color:darkblue; font-size:20px;'> Notification of acceptance to be sent to the authors on May 10th.</b>
-					</p>
-					<p class="text-black text-left">
-						<b style='color:darkblue; font-size:20px;'>[April 5th]</b> <b style='color:darkblue; font-size:20px;'> Submission deadline extended to April 24th, AoE (FIRM).</b>
-					</p>
+
+				<div class="text-black text-left">
+					<ul>
+						<li><p>Papers should be no more than 6 single-spaced pages including references.</p></li>
+						<li><p>Camera-ready papers should adhere to the ACM templates that can be found here: https://www.acm.org/publications/proceedings-template. Templates are provided for formatting papers in MS Word and LaTeX. In LaTeX, you should use \documentclass[sigconf]{acmart}.</p></li>
+						<li><p>Note that the original submission instructions suggested using the old ACM template. The font size in the submission template was 10pt, the new template will use 9pt. Using the new ACM template means that you have more space to address the comments by the reviewers. Please also double check to make sure that you are using the new template (linked in the previous bullet).</p></li>
+						<li><p>Please do NOT number the pages of your camera-ready paper (by default page numbers are disabled in the ACM template).</p></li>
+						<li><p>You should provide proper indexing information in the final version according to the ACM Computing Classification System (CCS). More information about the ACM CCS is available on the ACM CCS website.</p></li>
+						<li><p>After completing the rights management form, you will be emailed the correct rights management text and bibliographic strip to place within your paper. It is essential that you add the text into your paper.</p></li>
+						<li><p>Avoid using any special characters or non-standard fonts. We must be able to display and print your submission exactly as we receive it using only standard tools and printers, so we strongly suggest that you use only standard fonts embedded in the PDF file.</p></li>
+					</ul>
+				</div>
 		</div>
 		</div>
 		</div>
+	</section>
 
 	<section id="about">
 		<div class="container">
@@ -256,16 +285,15 @@
 					<div class="col-lg-offset-2 text-center">
 						<i class="fa fa-4x fa-user-plus wow bounceIn text-primary" data-wow-delay=".1s"></i>
 						<h3>Registration</h3>
-						<!-- <p class="text-left">See <a href="https://www.sigmobile.org/mobisys/2023/registration.html" target="_blank" rel="noopener noreferrer">registration information for MobiSys 2023</a>. Important dates:</p>
+						<p class="text-left">See <a href="https://www.sigmobile.org/mobisys/2023/registration.html" target="_blank" rel="noopener noreferrer">registration information for MobiSys 2023</a>. Important dates:</p>
 						<div class="text-black text-left">
 							<ul>
-							  <li><p>Early Registration 1: <b>To be announced.</b></p></li>
-							  <li><p>Early Registration 2: <b>To be announced.</b></p></li>
-							  <li><p>Default Registration: <b>To be announced.</b></p></li>
+							  <li><p>Early Registration 1: <b>Before May 15, 2023, 23:59 GMT+3</b></p></li>
+							  <li><p>Early Registration 2: <b>Before June 17, 2023, 23:59 GMT+3</b></p></li>
+							  <li><p>Default Registration: <b>After June 18, 2023, 00:00 GMT+3</b></p></li>
 							</ul>         
-						</div> -->
-						<!--  <p class="text-left">Each accepted paper must be covered by a non-student registration from at least one of the authors.</p> -->
-						<p class="text-left">Workshop registration details to be announced soon.</p>
+						</div>
+						<p class="text-left">Each accepted paper must be covered by a "Full Pass" or "Workshops ONLY" from at least one of the authors.</p>
 					</div>
 		</div>
 	</section>
