--- a/index.html
+++ b/index.html
@@ -293,7 +293,7 @@
 							  <li><p>Default Registration: <b>After June 18, 2023, 00:00 GMT+3</b></p></li>
 							</ul>         
 						</div>
-						<p class="text-left">Each accepted paper must be covered by a "Full Pass" or "Workshops ONLY" from at least one of the authors.</p>
+						<p class="text-left">Each accepted paper must be covered by a "Full Pass" or "Workshops ONLY" registration from at least one of the authors.</p>
 					</div>
 		</div>
 	</section>
