minor update second

--- a/index.html
+++ b/index.html
@@ -353,7 +353,7 @@
 					<ul>
 						<li><p><a href="https://www.linkedin.com/in/robertomorabito/" target="_blank" rel="noopener noreferrer">Roberto Morabito, University of Helsinki</a></p></li>
 						<li><p><a href="https://kimkt.com/" target="_blank" rel="noopener noreferrer">Kwang Taik Kim, Purdue University</a></p></li>
-						<li><p><a href="https://www.oulu.fi/en/researchers/susanna-pirttikangas" target="_blank" rel="noopener noreferrer">Susanna Pirttikangas, University of Oulu</a></p></li>
+						<!--<<li><p><a href="https://www.oulu.fi/en/researchers/susanna-pirttikangas" target="_blank" rel="noopener noreferrer">Susanna Pirttikangas, University of Oulu</a></p></li>-->
 					</ul>
 
 				</div>
