minor update second camera ready

--- a/index.html
+++ b/index.html
@@ -153,7 +153,7 @@
 						<li><p>Note that the original submission instructions suggested using the old ACM template. The font size in the submission template was 10pt, the new template will use 9pt. Using the new ACM template means that you have more space to address the comments by the reviewers. Please also double check to make sure that you are using the new template (linked in the previous bullet).</p></li>
 						<li><p>Please do NOT number the pages of your camera-ready paper (by default page numbers are disabled in the ACM template).</p></li>
 						<li><p>You should provide proper indexing information in the final version according to the ACM Computing Classification System (CCS). More information about the ACM CCS is available on the ACM CCS website.</p></li>
-						<li><p>After completing the rights management form, you will be emailed the correct rights management text and bibliographic strip to place within your paper. It is essential that you add the text into your paper.</p></li>
+						<li><p>After completing the rights management form, you will be emailed the correct rights management text and bibliographic strip to place within your paper. It is essential that you add the text into your paper. <b style='color:red'> [To be sent to the authors in the coming days].</b></p></li>
 						<li><p>Avoid using any special characters or non-standard fonts. We must be able to display and print your submission exactly as we receive it using only standard tools and printers, so we strongly suggest that you use only standard fonts embedded in the PDF file.</p></li>
 					</ul>
 				</div>
