camera ready updated

--- a/index.html
+++ b/index.html
@@ -125,6 +125,9 @@
 					<h2 class="section-heading"><b style='color:red;'>News</b></h2>
 					<hr class="light">
 					<p class="text-black text-left">
+						<b style='color:darkblue; font-size:16px;'>[May 12th]</b> <b style='color:darkblue; font-size:16px;'> The e-Rights form has been generated. Authors should have received an email from rightsreview@acm.org by now.</b>
+					</p>
+					<p class="text-black text-left">
 						<b style='color:darkblue; font-size:16px;'>[May 11th]</b> <b style='color:darkblue; font-size:16px;'> Camera-Ready Instructions and Registration details updated.</b>
 					</p>
 					<p class="text-black text-left">
@@ -148,13 +151,26 @@
 
 				<div class="text-black text-left">
 					<ul>
+						<p><b style='color:black; font-size:20px;'>Complete rights management form</b></p>
+						<li><p>Before submitting camera-ready papers, you need to complete the rights management form. You will be notified by email once these forms are available and ready to sign.</p></li>
+						<li><p>As rights management emails are sent from an automated system, there is a chance that emails sent will wind up in SPAM folders. Please make sure that you and your authors set email SPAM settings to allow emails from <a href="rightsreview@acm.org" target="_blank" rel="noopener noreferrer">rightsreview@acm.org</a>.</p></li>
+						<p><b style='color:black; font-size:20px;'>Format Paper</b></p>
 						<li><p>Papers should be no more than 6 single-spaced pages including references.</p></li>
-						<li><p>Camera-ready papers should adhere to the ACM templates that can be found here: https://www.acm.org/publications/proceedings-template. Templates are provided for formatting papers in MS Word and LaTeX. In LaTeX, you should use \documentclass[sigconf]{acmart}.</p></li>
+						<li><p>Camera-ready papers should adhere to the ACM templates that can be found here: <a href="https://www.acm.org/publications/proceedings-template" target="_blank" rel="noopener noreferrer">https://www.acm.org/publications/proceedings-template</a>. Templates are provided for formatting papers in MS Word and LaTeX. In LaTeX, you should use \documentclass[sigconf]{acmart}.</p></li>
 						<li><p>Note that the original submission instructions suggested using the old ACM template. The font size in the submission template was 10pt, the new template will use 9pt. Using the new ACM template means that you have more space to address the comments by the reviewers. Please also double check to make sure that you are using the new template (linked in the previous bullet).</p></li>
 						<li><p>Please do NOT number the pages of your camera-ready paper (by default page numbers are disabled in the ACM template).</p></li>
-						<li><p>You should provide proper indexing information in the final version according to the ACM Computing Classification System (CCS). More information about the ACM CCS is available on the ACM CCS website.</p></li>
-						<li><p>After completing the rights management form <b style='color:red'>(this will be sent to the authors shortly)</b>, you will be emailed the correct rights management text and bibliographic strip to place within your paper. It is essential that you add the text into your paper.</p></li>
+						<li><p>You should provide proper indexing information in the final version according to the ACM Computing Classification System (CCS). More information about the ACM CCS is available on the <a href="https://dl.acm.org/ccs" target="_blank" rel="noopener noreferrer">ACM CCS website.</a></p></li>
+						<li><p>After completing the rights management form, you will be emailed the correct rights management text and bibliographic strip to place within your paper. It is essential that you add the text into your paper.</p></li>
 						<li><p>Avoid using any special characters or non-standard fonts. We must be able to display and print your submission exactly as we receive it using only standard tools and printers, so we strongly suggest that you use only standard fonts embedded in the PDF file.</p></li>
+						<p><b style='color:black; font-size:20px;'>Submit camera-ready version</b></p>
+						<li><p>Go to the NetAISys 2023 submission page and edit your paper: <a href="https://netaisys23.hotcrp.com" target="_blank" rel="noopener noreferrer">https://netaisys23.hotcrp.com</a></p></li>
+						<li><p>Submit the PDF of your camera-ready paper.</p></li>
+						<p>The PDFs must satisfy the following requirements:</p>
+						<li><p>They have the complete rights text (bibliographic strip, ISBN, DOI, etc.). This information is emailed to authors after they complete their e-Rights forms and must be added add to the paper.</p></li>
+						<li><p>They are optimized for fast Web viewing.</p></li>
+						<li><p>They have Type 1 fonts (scalable), not Type 3 (bit-mapped). ACM cannot substitute font types. This really must be done in the source files before the Postscript or PDF is generated. If bit-mapped fonts are used, they will not necessarily display legibly in all PDF readers on all platforms, though they will print out fine.</p></li>
+						<li><p>All fonts are embedded. Any PDF that is not deposited with fonts embedded will need to be corrected. In order to help you through this process, we have created documentation on how to embed your fonts. Please download the ACM Digital Library optimal distiller settings file, ACM.joboptions.</p></li>
+						<li><p>The PDFs are named according to the ACM convention: sequence-firstauthorlastname.pdf.</p></li>
 					</ul>
 				</div>
 		</div>
