update about program

--- a/index.html
+++ b/index.html
@@ -62,8 +62,11 @@
 					<li>
 						<a class="page-scroll" href="#news"><b style='color:red;'>News</b> </a>
 					</li>
-					<li>
+					<!-- <li>
 						<a class="page-scroll" href="#camera-ready"><b style='color:green;'>Camera Ready</b> </a>
+					</li> -->
+					<li>
+						<a class="page-scroll" href="#workshop-program"><b style='color:green;'>Workshop Program</b> </a>
 					</li>
 					<li>
 						<a class="page-scroll" href="#about">About</a>
@@ -125,28 +128,44 @@
 					<h2 class="section-heading"><b style='color:red;'>News</b></h2>
 					<hr class="light">
 					<p class="text-black text-left">
-						<b style='color:darkblue; font-size:16px;'>[May 12th]</b> <b style='color:darkblue; font-size:16px;'> The e-Rights form has been generated. Authors should have received an email from rightsreview@acm.org by now.</b>
+						<b style='color:darkblue; font-size:16px;'>[June 5th]</b> <b style='color:darkblue; font-size:16px;'> Workshop Program and Presenter Instructions to be announced by June 8th. Stay tuned!</b>
+					</p>					
+					<p class="text-black text-left">
+						<b style='color:darkblue; font-size:9px;'>[May 12th]</b> <b style='color:darkblue; font-size:9px;'> The e-Rights form has been generated. Authors should have received an email from rightsreview@acm.org by now.</b>
 					</p>
 					<p class="text-black text-left">
-						<b style='color:darkblue; font-size:16px;'>[May 11th]</b> <b style='color:darkblue; font-size:16px;'> Camera-Ready Instructions and Registration details updated.</b>
+						<b style='color:darkblue; font-size:9px;'>[May 11th]</b> <b style='color:darkblue; font-size:9px;'> Camera-Ready Instructions and Registration details updated.</b>
 					</p>
 					<p class="text-black text-left">
-						<b style='color:darkblue; font-size:16px;'>[May 8th]</b> <b style='color:darkblue; font-size:16px;'> Notification of acceptance to be sent to the authors on May 10th.</b>
+						<b style='color:darkblue; font-size:9px;'>[May 8th]</b> <b style='color:darkblue; font-size:9px;'> Notification of acceptance to be sent to the authors on May 10th.</b>
 					</p>
 					<p class="text-black text-left">
-						<b style='color:darkblue; font-size:16px;'>[April 5th]</b> <b style='color:darkblue; font-size:16px;'> Submission deadline extended to April 24th, AoE (FIRM).</b>
+						<b style='color:darkblue; font-size:9px;'>[April 5th]</b> <b style='color:darkblue; font-size:9px;'> Submission deadline extended to April 24th, AoE (FIRM).</b>
 					</p>
 		</div>
 		</div>
 		</div>
 
-	<section id="camera-ready">
+	<section id="workshop-program">
+		<div class="container">
+			<div class="row">
+				<div class="col-lg-12 text-center">
+					<h2 class="section-heading">Networked AI Systems Workshop Program</h2>
+					<hr class="light">
+
+					<p class="text-black text-left">
+						To be Announced.
+					</p>
+		</div>
+		</div>
+		</div>
+	</section>
+
+	<!-- <section id="camera-ready">
 		<div class="container">
 			<div class="row">
 				<div class="col-lg-12 text-center">
 					<h2 class="section-heading">Camera-Ready instructions</h2>
-					<!-- <h3 class="section-heading">September 12th</h3> -->
-					<!-- <h3 class="section-heading">Cancún, México</h3> -->
 					<hr class="light">
 
 				<div class="text-black text-left">
@@ -176,7 +195,7 @@
 		</div>
 		</div>
 		</div>
-	</section>
+	</section> -->
 
 	<section id="about">
 		<div class="container">
@@ -194,20 +213,6 @@
 		</div>
 		</div>
 	</section>
-
-
-<!--     <section id="program">
-		<div class="container">
-			<div class="row">
-				<div class="col-lg-12 text-center">
-					<h2 class="section-heading">Program</h2>
-					<hr class="primary">
-				</div>
-			</div>
-
-
-		
-	</section> -->
 
 
 	<section id="CfP">
@@ -278,9 +283,9 @@
 						<div class="text-black text-left">
 						  <ul>
 							<li><p>Submission Deadline: <b>Monday April 24th, 2023, AoE [FIRM]</b></p></li>
-							<li><p>Notification of Acceptenace: <b style='color:red;'>Monday May 10th, 2023, AoE</b></p></li>
-							<li><p>Camera-ready Papers Due: <b style='color:red;'>Monday May 15th, 2023, AoE [FIRM]</b></p></li>
-							<li><p>Workshop Date: <b>Sunday June 18, 2023</b></p></li>
+							<li><p>Notification of Acceptenace: <b>Monday May 10th, 2023, AoE</b></p></li>
+							<li><p>Camera-ready Papers Due: <b>Monday May 15th, 2023, AoE [FIRM]</b></p></li>
+							<li><p>Workshop Date: <b style='color:red;'>Sunday June 18, 2023</b></p></li>
 						  </ul>         
 						</div>   
 				</div>
