update about program 2

--- a/index.html
+++ b/index.html
@@ -130,7 +130,7 @@
 					<p class="text-black text-left">
 						<b style='color:darkblue; font-size:16px;'>[June 5th]</b> <b style='color:darkblue; font-size:16px;'> Workshop Program and Presenter Instructions to be announced by June 8th. Stay tuned!</b>
 					</p>					
-					<p class="text-black text-left">
+					<!-- <p class="text-black text-left">
 						<b style='color:darkblue; font-size:9px;'>[May 12th]</b> <b style='color:darkblue; font-size:9px;'> The e-Rights form has been generated. Authors should have received an email from rightsreview@acm.org by now.</b>
 					</p>
 					<p class="text-black text-left">
@@ -141,7 +141,7 @@
 					</p>
 					<p class="text-black text-left">
 						<b style='color:darkblue; font-size:9px;'>[April 5th]</b> <b style='color:darkblue; font-size:9px;'> Submission deadline extended to April 24th, AoE (FIRM).</b>
-					</p>
+					</p> -->
 		</div>
 		</div>
 		</div>
