--- a/index.html
+++ b/index.html
@@ -69,6 +69,9 @@
 						<a class="page-scroll" href="#workshop-program"><b style='color:green;'>Workshop Program</b> </a>
 					</li>
 					<li>
+						<a class="page-scroll" href="#workshop-venue"><b style='color:green;'>Workshop Venue</b> </a>
+					</li>
+					<li>
 						<a class="page-scroll" href="#about">About</a>
 					</li>
 					<li>
@@ -161,6 +164,22 @@
 		</div>
 	</section>
 
+	<section id="workshop-venue">
+		<div class="container">
+			<div class="row">
+				<div class="col-lg-12 text-center">
+					<h2 class="section-heading">Workshop Venue</h2>
+					<hr class="light">
+
+					<p class="text-black text-left">
+						The workshops will be hosted at <b>Kielikeskus (Fabianinkatu 26)</b>.
+					</p>
+					<p>
+					<iframe width="425" height="350" frameborder="0" scrolling="no" marginheight="0" marginwidth="0" src="https://www.openstreetmap.org/export/embed.html?bbox=24.947775142097477%2C60.17018517963164%2C24.9498431152347%2C60.17141528810405&amp;layer=mapnik&amp;marker=60.1708%2C24.9489" style="border: 1px solid black"></iframe></p>
+		</div>
+		</div>
+		</div>
+	</section>
 	<!-- <section id="camera-ready">
 		<div class="container">
 			<div class="row">
