--- a/index.html
+++ b/index.html
@@ -69,11 +69,11 @@
 						<a class="page-scroll" href="#workshop-program"><b style='color:green;'>Workshop Program</b> </a>
 					</li>
 					<li>
-						<a class="page-scroll" href="#workshop-venue"><b style='color:green;'>Workshop Venue</b> </a>
-					</li>
-					<li>
 						<a class="page-scroll" href="#presenter–instructions"><b style='color:green;'>Presenter Instructions</b> </a>
-					</li>					
+					</li>	
+					<li>
+						<a class="page-scroll" href="#workshop-venue"><b style='color:green;'>Workshop Venue</b> </a>
+					</li>				
 					<li>
 						<a class="page-scroll" href="#about">About</a>
 					</li>
@@ -134,6 +134,9 @@
 					<h2 class="section-heading"><b style='color:red;'>News</b></h2>
 					<hr class="light">
 					<p class="text-black text-left">
+						<b style='color:darkblue; font-size:16px;'>[June 8th]</b> <b style='color:darkblue; font-size:16px;'> Workshop Program and Presenter Instructions are on-line.</b>
+					</p>
+					<p class="text-black text-left">
 						<b style='color:darkblue; font-size:16px;'>[June 5th]</b> <b style='color:darkblue; font-size:16px;'> Workshop Program and Presenter Instructions to be announced by June 8th. Stay tuned!</b>
 					</p>					
 					<!-- <p class="text-black text-left">
@@ -157,11 +160,26 @@
 			<div class="row">
 				<div class="col-lg-12 text-center">
 					<h2 class="section-heading">Networked AI Systems Workshop Program</h2>
-					<hr class="light">
-
-					<p class="text-black text-left">
-						To be Announced.
-					</p>
+					<div class="col-lg-12 text-center">
+						<p class="text-black text-left">
+						NetAISys and <a href="https://blogs.helsinki.fi/envsys-2023/" target="_blank" rel="noopener noreferrer">EnvSys</a> Workshops are merging for ACM MobiSys 2023 on June 18, creating a comprehensive one-day event.
+						</p>	
+						<p class="text-black text-left">
+						Both workshops revolve around the pivotal roles of artificial intelligence, focusing on different but complementary aspects. NetAISys explores the integration of AI with networking systems, investigating the challenges and opportunities it brings. EnvSys, on the other hand, emphasizes the application of these technologies to environmental sensing, tackling crucial environmental issues using tech solutions.
+						</p>
+						<p class="text-black text-left">
+						We believe that this merge will serve as a platform for fruitful discussions and exchange of ideas, giving you exposure to a broader spectrum of research at the intersection of networking technologies, AI and environmental sensing. This will also provide an enriched setting where the EnvSys cases can potentially act as real-world use-cases for Networked AI Systems.
+						</p>				
+						<p class="text-black text-left">
+						Further information on our two keynote speakers will be shared soon. Please check back for updates.
+						</p>
+						<p class="text-black text-left">
+						<b style='color:red; font-size:16px;'> Note: This is a preliminary program and is subject to minor changes. Please check back for any updates.</b>
+						</p>												
+					</div>
+						<div class="service-box col-lg-12 text-center">
+							<img class="img" src="./img/program.png" width="1184" height="556"> <!--  width="1480" height="695"> -->
+						</div>
 		</div>
 		</div>
 		</div>
@@ -172,11 +190,12 @@
 			<div class="row">
 				<div class="col-lg-12 text-center">
 					<h2 class="section-heading">Presenter Instructions</h2>
-					<hr class="light">
-
-					<p class="text-black text-left">
-						To be Announced.
-					</p>
+						<div class="text-black text-left">
+							<ul>
+								<li><p><b>Duration:</b>Each presentation will be allotted 15 minutes - 12 minutes for the presentation itself and 3 minutes for Q&A.</p></li>
+								<li><p><b>Format:</b> All presentations should preferably be in PowerPoint (.ppt/.pptx) or PDF format. Ensure that the content on your slides can be easily understood when projected on a large screen.</p></li>
+							</ul>
+						</div>
 		</div>
 		</div>
 		</div>
@@ -239,8 +258,6 @@
 			<div class="row">
 				<div class="col-lg-12 text-center">
 					<h2 class="section-heading">MobiSys 2023 Workshop on Networked AI Systems</h2>
-					<!-- <h3 class="section-heading">September 12th</h3> -->
-					<!-- <h3 class="section-heading">Cancún, México</h3> -->
 					<hr class="light">
 
 					<p class="text-black text-left">
