--- a/index.html
+++ b/index.html
@@ -170,16 +170,53 @@
 						<p class="text-black text-left">
 						We believe that this merge will serve as a platform for fruitful discussions and exchange of ideas, giving you exposure to a broader spectrum of research at the intersection of networking technologies, AI and environmental sensing. This will also provide an enriched setting where the EnvSys cases can potentially act as real-world use-cases for Networked AI Systems.
 						</p>				
-						<p class="text-black text-left">
+						<!-- <p class="text-black text-left">
 						Further information on our two keynote speakers will be shared soon. Please check back for updates.
 						</p>
 						<p class="text-black text-left">
 						<b style='color:red; font-size:16px;'> Note: This is a preliminary program and is subject to minor changes. Please check back for any updates.</b>
-						</p>												
+						</p> -->												
 					</div>
 						<div class="service-box col-lg-12 text-center">
-							<img class="img" src="./img/program.png" width="1184" height="556"> <!--  width="1480" height="695"> -->
+							<img class="img" src="./img/program_final.png" width="1184" height="556"> <!--  width="1480" height="695"> -->
 						</div>
+		<div class="container">
+			 <div class="col-lg-12 text-center">
+						<h2 class="section-heading">Keynotes</h2>
+						<hr class="primary">
+			 </div>
+		</div>   
+		<div class="row text-black">
+				<div class="col-lg-offset-2 col-lg-4 text-center">
+					<div class="service-box">
+
+						<img class="img-circle" src="./img/keynotes/stephan02.png" alt="Rounded image" width="150" height="150">
+						<h2><a href="https://ambientintelligence.aalto.fi/team_stephan.php" target="_blank" rel="noopener noreferrer">Prof. Stephan Sigg</a></h2>
+						<p>Aalto University</p>
+					</div>
+
+				</div>
+
+				<div class="col-lg-4 text-center">
+					<div class="service-box">
+						<img class="img-circle" src="./img/keynotes/KimmoPentikainen.jpg" alt="Rounded image" width="150" height="150">
+						<h2><a href="https://fi.linkedin.com/in/pentikainen" target="_blank" rel="noopener noreferrer">Kimmo Pentikäinen</a></h2>
+						<p>Elisa Oy</p>
+					</div>
+
+				</div>
+
+				<!--<div class="col-lg-4 text-center">
+					<div class="service-box">
+						<img class="img-circle" src="./img/organizers/edward.png" alt="Rounded image" width="150" height="150">
+						<h3><a href="https://www.ejaywang.com/">Edward Wang</a></h3>
+						<p>Assistant Professor<br>University of California San Diego</p>
+					</div>
+
+				</div> -->
+
+				
+		</div>							
 		</div>
 		</div>
 		</div>
