program updated bis

--- a/index.html
+++ b/index.html
@@ -134,6 +134,9 @@
 					<h2 class="section-heading"><b style='color:red;'>News</b></h2>
 					<hr class="light">
 					<p class="text-black text-left">
+						<b style='color:darkblue; font-size:16px;'>[June 14th]</b> <b style='color:darkblue; font-size:16px;'>Keynote speakers announced!</b>
+					</p>
+					<p class="text-black text-left">
 						<b style='color:darkblue; font-size:16px;'>[June 8th]</b> <b style='color:darkblue; font-size:16px;'> Workshop Program and Presenter Instructions are on-line.</b>
 					</p>
 					<p class="text-black text-left">
