--- a/index.html
+++ b/index.html
@@ -192,38 +192,32 @@
 		<div class="row text-black">
 				<div class="col-lg-offset-2 col-lg-4 text-center">
 					<div class="service-box">
-
 						<img class="img-circle" src="./img/keynotes/stephan02.png" alt="Rounded image" width="150" height="150">
 						<h2><a href="https://ambientintelligence.aalto.fi/team_stephan.php" target="_blank" rel="noopener noreferrer">Prof. Stephan Sigg</a></h2>
 						<p>Aalto University</p>
+						<div class="service-box col-lg-12 text-center">
+							<p><b style='color:red;'>Keynote title</b></p>
+							<p><b><i>"Free-space gesture interaction through communication and sensing conversion"</i></b></p>
+						</div>
 					</div>
-
 				</div>
-
-				<div class="col-lg-4 text-center">
+				<div class="col-lg-6 text-center">
 					<div class="service-box">
 						<img class="img-circle" src="./img/keynotes/KimmoPentikainen.jpg" alt="Rounded image" width="150" height="150">
 						<h2><a href="https://fi.linkedin.com/in/pentikainen" target="_blank" rel="noopener noreferrer">Kimmo Pentikäinen</a></h2>
 						<p>Elisa Oy</p>
+						<div class="service-box col-lg-12 text-center">
+							<p><b style='color:red;'>Keynote title</b></p>
+							<p><b><i>"Advancements in Mobile Computer Vision: Supersight Application and Its Real-World Use Cases"</i></b></p>
+						</div>
 					</div>
-
-				</div>
-
-				<!--<div class="col-lg-4 text-center">
-					<div class="service-box">
-						<img class="img-circle" src="./img/organizers/edward.png" alt="Rounded image" width="150" height="150">
-						<h3><a href="https://www.ejaywang.com/">Edward Wang</a></h3>
-						<p>Assistant Professor<br>University of California San Diego</p>
-					</div>
-
-				</div> -->
-
-				
+				</div>		
 		</div>							
 		</div>
-		</div>
+
 		</div>
 	</section>
+
 
 	<section id="presenter–instructions">
 		<div class="container">
@@ -236,8 +230,8 @@
 								<li><p><b>Format:</b> All presentations should preferably be in PowerPoint (.ppt/.pptx) or PDF format. Ensure that the content on your slides can be easily understood when projected on a large screen.</p></li>
 							</ul>
 						</div>
-		</div>
-		</div>
+				</div>
+			</div>
 		</div>
 	</section>
 
@@ -253,7 +247,7 @@
 					</p>
 					<p>
 					<iframe width="425" height="350" frameborder="0" scrolling="no" marginheight="0" marginwidth="0" src="https://www.openstreetmap.org/export/embed.html?bbox=24.947775142097477%2C60.17018517963164%2C24.9498431152347%2C60.17141528810405&amp;layer=mapnik&amp;marker=60.1708%2C24.9489" style="border: 1px solid black"></iframe></p>
-		</div>
+			</div>
 		</div>
 		</div>
 	</section>
@@ -483,7 +477,6 @@
 			 <div class="row text-black text-center">
 
 				<div class="tpc col-lg-12 col-lg-offset-1 text-left">
-					<p>TPC currently being updated.</p>
 					<ul>
 						<li><p><a href="https://www.ece.cmu.edu/directory/bios/joe-wong-carlee.html" target="_blank" rel="noopener noreferrer">Carlee Joe-Wong, Carnegie Mellon University</a></p></li>
 						<li><p><a href="https://sites.google.com/ncsu.edu/seyyedalihosseinalipour" target="_blank" rel="noopener noreferrer">Seyyedali Hosseinalipour, University of Buffalo</a></p></li>
